--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/node": "^20",
+    "@types/node-telegram-bot-api": "^0.63.2",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "@clerk/nextjs": "^4.27.1",
     "@prisma/client": "^5.6.0",
+    "prisma": "^5.6.0",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
