--- a/netlify.toml
+++ b/netlify.toml
@@ -5,7 +5,7 @@
   package = "@netlify/plugin-nextjs"
 
 [build.environment]
-  NODE_VERSION = "14"
+  NODE_VERSION = "v21.2.0"
 
 [dev]
   command = "npm run dev"
