--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "npm run build"
+  command = "npm run build && npx prisma generate"
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
