--- a/netlify.toml
+++ b/netlify.toml
@@ -1,12 +1,7 @@
 [build]
   command = "npm run build && npx prisma generate"
-  publish = "/opt/build/repo/.next"
-
-[[plugins]]
-  package = "@netlify/plugin-nextjs"
+  publish = ".next"
 
 [build.environment]
   NODE_VERSION = "v21.2.0"
 
-[dev]
-  command = "npm run dev"
