--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node-telegram-bot-api": "^0.63.2",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.292.0",
